UPSTREAM: ARM: enable ARM_HAS_SG_CHAIN for multiplatform
Enable ARM_HAS_SG_CHAIN for all multiplatform targets, it makes sense
to enable on all "modern" platforms; downsides are limited for platforms
that don't need it.

Requested-by: Russell King <rmk+kernel@arm.linux.org.uk>
Signed-off-by: Olof Johansson <olof@lixom.net>
(cherry picked from commit 42dc836dbe719b0f7afef1794a12a53fa6d7f723)
Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>
[djkurtz: resolved trivial conflicts]

Conflicts:
	arch/arm/Kconfig

BUG=chromium:399935
TEST=builds clean
TEST=w/ rockchip drm patches, buffers are allocated without hitting WARN
     in __sg_alloc_table

Change-Id: Ied5d9e567a2319080f144694fd9e0d1ef16e0da8
Reviewed-on: https://chromium-review.googlesource.com/215931
Reviewed-by: Doug Anderson <dianders@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -307,6 +307,7 @@ choice
 config ARCH_MULTIPLATFORM
 	bool "Allow multiple platforms to be selected"
 	depends on MMU
+	select ARM_HAS_SG_CHAIN
 	select ARM_PATCH_PHYS_VIRT
 	select AUTO_ZRELADDR
 	select COMMON_CLK
