BACKPORT-PARTIAL: dts: tegra: Add APB_MISC_GP as a mipi pad control bank
This patch adds the APB_MISC_GP_MIPI_PAD_CTRL_0 as a pinctrl
bank so the new mipi pad control group can be muxed between CSI
and DSI_B.

BUG=chrome-os-partner:30799
TEST=Tested on ryu

Change-Id: I33c50b952583af6860c30c08ee830592845f8caa
Signed-off-by: Sean Paul <seanpaul@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/218862
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm/boot/dts/tegra124.dtsi
+++ b/arch/arm/boot/dts/tegra124.dtsi
@@ -113,7 +113,8 @@
 	pinmux: pinmux@70000868 {
 		compatible = "nvidia,tegra124-pinmux";
 		reg = <0x70000868 0x164>,	/* Pad control registers */
-		      <0x70003000 0x434>;	/* Mux registers */
+		      <0x70003000 0x434>,	/* Mux registers */
+		      <0x70000820 0x8>;		/* MIPI pad control */
 	};
 
 	/*
