--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -115,7 +115,8 @@
 	pinmux: pinmux@70000868 {
 		compatible = "nvidia,tegra124-pinmux";
 		reg = <0x0 0x70000868 0x0 0x164>,	/* Pad control registers */
-		      <0x0 0x70003000 0x0 0x434>;	/* Mux registers */
+		      <0x0 0x70003000 0x0 0x434>,	/* Mux registers */
+		      <0x0 0x70000820 0x0 0x8>;		/* MIPI pad control */
 	};
 
 	/*
