--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -27,6 +27,14 @@
 	i2c@7000c000 {
 		status = "okay";
 		clock-frequency = <400000>;
+
+		touchscreen: i2c-hid-dev@20 {
+			compatible = "hid-over-i2c";
+			reg = <0x20>;
+			hid-descr-addr = <0x0020>;
+			interrupt-parent = <&gpio>;
+			interrupts = <TEGRA_GPIO(K, 2) IRQ_TYPE_EDGE_FALLING>;
+		};
 	};
 
 	// I2C2 (GEN2_I2C)
