CHROMIUM: arm64: dts: tegra132: enable thermtrip for ryu
Enable soctherm thermtrip shutdown through the palmas PMIC.

BUG=chrome-os-partner:30834
TEST=shutdown occurs when temperature passes threshold in thermtrip node

Change-Id: Ia1b8deffa4f05da231fb0fa7d04a1735a1b07ddb
Signed-off-by: David Riley <davidriley@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/216344

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -367,6 +367,12 @@
 		nvidia,core-pwr-off-time = <61036>;
 		nvidia,core-power-req-active-high;
 		nvidia,sys-clock-req-active-high;
+
+		i2c-thermtrip {
+			nvidia,pmu = <&palmas>;
+			nvidia,reg-addr = <0xa0>;
+			nvidia,reg-data = <0x0>;
+		};
 	};
 
 	clocks {
