CHROMIUM: ARM64: dts: tegra132: add node for cpu edp
Add cpu_edp node for tegra132 Ryu and Norrin.

BUG=chrome-os-partner:33373
TEST=Verified. Can read cpu edp table from sysfs.

Signed-off-by: Wei Ni <wni@nvidia.com>
Change-Id: I8efca03ad06f8660d50fcdeead49b783b61ea7eb
Reviewed-on: https://chromium-review.googlesource.com/216590
Tested-by: Wei Ni <wni.nvidia@gmail.com>
Reviewed-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Olof Johansson <olofj@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-norrin.dts
+++ b/arch/arm64/boot/dts/tegra132-norrin.dts
@@ -1823,6 +1823,11 @@
 		};
 	};
 
+	cpu_edp {
+		compatible = "nvidia,tegra132-cpu-edp";
+		nvidia,edp-limit = <16800>;
+	};
+
 	thermal-zones {
 		pllx {
 			trips {
