CHROMIUM: ARM64: dts: tegra132: add cpu edp thermal reaction node
Add cpu_edp thermal reaction node for tegra132 Ryu and Norrin.

BUG=chrome-os-partner:33373
TEST=Verfied. Can load this node, and access in sysfs.

Signed-off-by: Wei Ni <wni@nvidia.com>
Change-Id: Ibfd8a57e7803a9a3aa6f9cdca128fdbe667efdcd
Reviewed-on: https://chromium-review.googlesource.com/216592
Tested-by: Wei Ni <wni.nvidia@gmail.com>
Reviewed-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Olof Johansson <olofj@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-norrin.dts
+++ b/arch/arm64/boot/dts/tegra132-norrin.dts
@@ -1823,9 +1823,17 @@
 		};
 	};
 
-	cpu_edp {
+	cpu_edp: cpu_edp {
 		compatible = "nvidia,tegra132-cpu-edp";
 		nvidia,edp-limit = <16800>;
+	};
+
+	cpu_edp_cdev_cap {
+		compatible = "nvidia,tegra132-cpu-edp-cdev-action";
+		act-dev = <&cpu_edp>;
+		cdev-type = "CPU-EDP-cap";
+
+		#cooling-cells = <2>; /* min followed by max */
 	};
 
 	thermal-zones {
