--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -5,9 +5,11 @@ dtb-$(CONFIG_ARCH_TEGRA) += tegra132-ryu-p1.dtb
 dtb-$(CONFIG_ARCH_TEGRA) += tegra132-ryu-p3.dtb
 dtb-$(CONFIG_ARCH_TEGRA) += tegra132-ryu-p4.dtb
 
-targets += dtbs
+targets += dtbs dtbs_install
 targets += $(dtb-y)
 
 dtbs: $(addprefix $(obj)/, $(dtb-y))
 
 clean-files := *.dtb
+
+dtbs_install: $(addsuffix _dtbinst_, $(dtb-y))
