CHROMIUM: ARM64: DTS: tegra132: add interrup line for OC alarm
Add interrupt line for OC alarm in soctherm node.

BUG=chrome-os-partner:30834
TEST=soctherm driver can request the interrup

Change-Id: I902c5003f682243f201ec3e3ee66d2226ff3f115
Signed-off-by: Wei Ni <wni@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216876
Reviewed-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Olof Johansson <olofj@chromium.org>
Tested-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -609,7 +609,8 @@
 			0x0 0x60006000 0x0 0x400 /* 1: T124: CAR reg_base */
 			0x0 0x70040000 0x0 0x200>; /* 2: T132: CCROC reg_base */
 		reg-names = "soctherm-reg", "car-reg", "ccroc-reg";
-		interrupts = <GIC_SPI 48 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <GIC_SPI 48 IRQ_TYPE_LEVEL_HIGH
+				GIC_SPI 51 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&tegra_car TEGRA124_CLK_TSENSOR>,
 			<&tegra_car TEGRA124_CLK_SOC_THERM>;
 		clock-names = "tsensor", "soctherm";
