--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -1,5 +1,6 @@
 #include <dt-bindings/input/input.h>
 #include "tegra132.dtsi"
+#include "tegra132-ryu-emc.dtsi"
 #include "tegra132-ryu-gpio-default.dtsi"
 #include "tegra132-ryu-pinmux.dtsi"
 
