CHROMIUM: ARM64: dts: ryu: make vdd_core rail be controlled by NSLEEP
Enable external NSLEEP control function for the rail of vdd_core. This
can make it be controlled by NSLEEP pin when the system goes to deep
sleep mode.

BUG=chrome-os-partner:31211
TEST=suspend to LP0 and check vdd_core would be gated

Change-Id: I6db25befed00f9d28d6a52e808d74cd6c9f1ff46
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/219271
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -296,6 +296,7 @@
 						regulator-max-microvolt = <1150000>;
 						regulator-always-on;
 						regulator-boot-on;
+						ti,roof-floor = <3>;
 					};
 
 					palmas_smps8: smps8 {
