CHROMIUM: ARM64: dts: ryu: enable LP0 wake up for gpio-keys
This patch enable LP0 wake up function for power, lid and dock of
gpio-keys.

BUG=chrome-os-partner:31211
TEST=suspend to LP0 and wake up by power, lid and dock keys

Change-Id: Icd07a07005579dca4480ef29127856f11a6a4f59
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/219272
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -556,6 +556,8 @@
 			linux,code = <KEY_POWER>;
 			debounce-interval = <30>;
 			gpio-key,wakeup;
+			nvidia,pmc-wakeup = <&pmc
+				PMC_WAKE_TYPE_GPIO 51 PMC_TRIGGER_TYPE_NONE>;
 		};
 
 		lid {
@@ -564,6 +566,8 @@
 			linux,input-type = <5>; /* EV_SW */
 			linux,code = <0>; /* SW_LID */
 			gpio-key,wakeup;
+			nvidia,pmc-wakeup = <&pmc
+				PMC_WAKE_TYPE_GPIO 32 PMC_TRIGGER_TYPE_NONE>;
 		};
 
 		dock {
@@ -572,6 +576,8 @@
 			linux,input-type = <5>; /* EV_SW */
 			linux,code = <5>; /* SW_DOCK */
 			gpio-key,wakeup;
+			nvidia,pmc-wakeup = <&pmc
+				PMC_WAKE_TYPE_GPIO 56 PMC_TRIGGER_TYPE_NONE>;
 		};
 
 		volume_down {
