--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -4,6 +4,8 @@
 #include <dt-bindings/pinctrl/pinctrl-tegra.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/thermal/tegra124-soctherm.h>
+#include <dt-bindings/thermal/tegra132-dfll-trips.h>
+#include <dt-bindings/thermal/thermal.h>
 
 #include "skeleton.dtsi"
 
@@ -606,6 +608,75 @@
 
 			thermal-sensors =
 				<&soctherm TEGRA124_SOCTHERM_SENSOR_CPU>;
+
+			trips {
+				dfll_floor_trip0: dfll_floor_trip0 {
+					temperature = <TEGRA132_DFLL_THERMAL_FLOOR_0>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+				dfll_floor_trip1: dfll_floor_trip1 {
+					temperature = <TEGRA132_DFLL_THERMAL_FLOOR_1>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+				dfll_floor_trip2: dfll_floor_trip2 {
+					temperature = <TEGRA132_DFLL_THERMAL_FLOOR_2>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+				dfll_floor_trip3: dfll_floor_trip3 {
+					temperature = <TEGRA132_DFLL_THERMAL_FLOOR_3>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+				dfll_cap_trip0: dfll_cap_trip0 {
+					temperature = <TEGRA132_DFLL_THERMAL_CAP_0>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+				dfll_cap_trip1: dfll_cap_trip1 {
+					temperature = <TEGRA132_DFLL_THERMAL_CAP_1>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+				dfll_cap_trip2: dfll_cap_trip2 {
+					temperature = <TEGRA132_DFLL_THERMAL_CAP_2>; /* millicelsius */
+					hysteresis = <1000>; /* millicelsius */
+					type = "active";
+				};
+			};
+
+			cooling-maps {
+				map0 {
+					trip = <&dfll_floor_trip0>;
+					cooling-device = <&dfll_floor 1 1>;
+				};
+				map1 {
+					trip = <&dfll_floor_trip1>;
+					cooling-device = <&dfll_floor 2 2>;
+				};
+				map2 {
+					trip = <&dfll_floor_trip2>;
+					cooling-device = <&dfll_floor 3 3>;
+				};
+				map3 {
+					trip = <&dfll_floor_trip3>;
+					cooling-device = <&dfll_floor 4 4>;
+				};
+				map5 {
+					trip = <&dfll_cap_trip0>;
+					cooling-device = <&dfll_cap 1 1>;
+				};
+				map6 {
+					trip = <&dfll_cap_trip1>;
+					cooling-device = <&dfll_cap 2 2>;
+				};
+				map7 {
+					trip = <&dfll_cap_trip2>;
+					cooling-device = <&dfll_cap 3 3>;
+				};
+			};
 		};
 
 		mem {
@@ -841,14 +912,14 @@
 				(GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>;
 	};
 
-	dfll_cdev_cap {
+	dfll_cap: dfll_cdev_cap {
 		compatible = "nvidia,tegra-dfll-cdev-action";
 		act-dev = <&dfll>;
 		cdev-type = "DFLL-cap";
 		#cooling-cells = <2>; /* min followed by max */
 	};
 
-	dfll_cdev_floor {
+	dfll_floor: dfll_cdev_floor {
 		compatible = "nvidia,tegra-dfll-cdev-action";
 		act-dev = <&dfll>;
 		cdev-type = "DFLL-floor";
