--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -423,6 +423,25 @@
 			};
 		};
 
+		rt5677: audio-codec@2d {
+			compatible = "realtek,rt5677";
+			reg = <0x2d>;
+			interrupt-parent = <&gpio>;
+			interrupts = <TEGRA_GPIO(W, 3) IRQ_TYPE_EDGE_BOTH>;
+			realtek,pow-ldo2-gpio = <&gpio TEGRA_GPIO(R, 2) GPIO_ACTIVE_HIGH>;
+			realtek,in1-differential = "true";
+			realtek,jd2-gpio = <3>;    /* MIC_PRESENT_L generates an interruption */
+			realtek,gpio-config = /bits/ 8  <0 0 0 0 0 2>;   /* pull up MIC_PRESENT_L (GPIO6) */
+
+			gpio-controller;
+			#gpio-cells = <2>;
+		};
+
+		ssm4567: speaker-amp@34 {
+			compatible = "adi,ssm4567";
+			reg = <0x34>;
+		};
+
 		tmp451: temperature-sensor@4c {
 			compatible = "ti,tmp451";
 			reg = <0x4c>;
@@ -431,6 +450,12 @@
 			vcc-supply = <&palmas_smps8>;
 
 			#thermal-sensor-cells = <1>;
+		};
+	};
+
+	ahub@70300000 {
+		i2s@70301100 {
+			status = "okay";
 		};
 	};
 
@@ -640,5 +665,40 @@
 		compatible = "gpio-restart";
 		gpios = <&gpio TEGRA_GPIO(I, 5) GPIO_ACTIVE_LOW>;
 		priority = /bits/ 8 <200>;
+	};
+
+	sound {
+		compatible = "nvidia,tegra-audio-rt5677-ryu",
+		        "nvidia,tegra-audio-rt5677";
+		nvidia,model = "NVIDIA Tegra Ryu";
+
+		nvidia,audio-routing =
+			/* rt5677 codec */
+			"Headphone", "LOUT2",
+			"Headphone", "LOUT1",
+			"Headset Mic", "MICBIAS1",
+			"IN1P", "Headset Mic",
+			"IN1N", "Headset Mic",
+			"DMIC L1", "Internal Mic 1",
+			"DMIC R1", "Internal Mic 1",
+			"DMIC L2", "Internal Mic 2",
+			"DMIC R2", "Internal Mic 2",
+			/* speaker amp */
+			"DAC", "AIF2TX",
+			"Speaker", "OUT";
+
+		nvidia,i2s-controller = <&tegra_i2s1>;
+		nvidia,audio-codec = <&rt5677>;
+		nvidia,speaker-codec = <&ssm4567>;
+
+		nvidia,hp-det-gpios = <&gpio TEGRA_GPIO(R, 7) GPIO_ACTIVE_HIGH>;
+		nvidia,mic-present-gpios = <&rt5677 5 GPIO_ACTIVE_LOW>;
+		nvidia,hp-en-gpios = <&rt5677 1 GPIO_ACTIVE_HIGH>;
+		nvidia,dmic-clk-en-gpios = <&rt5677 2 GPIO_ACTIVE_HIGH>;
+
+		clocks = <&tegra_car TEGRA124_CLK_PLL_A>,
+		         <&tegra_car TEGRA124_CLK_PLL_A_OUT0>,
+		         <&tegra_car TEGRA124_CLK_EXTERN1>;
+		clock-names = "pll_a", "pll_a_out0", "mclk";
 	};
 };
