CHROMIUM: arm64: dts: tegra132-ryu: fix pinctrl for ramcode
GPIO_PG4 should not be pulled either high or low, fix up the pull property.

BUG=chrome-os-partner:30851
TEST=verified kernel booted and different EMC rates were possible.

Change-Id: I18e9a6bb4846937b2d355068745b527104e54737
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/218361
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
@@ -1171,7 +1171,7 @@
 			pg4 {
 				nvidia,pins = "pg4";
 				nvidia,function = "rsvd1";
-				nvidia,pull = <TEGRA_PIN_PULL_DOWN>;
+				nvidia,pull = <TEGRA_PIN_PULL_NONE>;
 				nvidia,tristate = <TEGRA_PIN_ENABLE>;
 				nvidia,enable-input = <TEGRA_PIN_DISABLE>;
 			};
