CHROMIUM: memory: tegra124: Move EMC driver to tegra/ subdir
With the new TEGRA_MC driver and driver structure, move the
TEGRA124_EMC driver into the tegra subdirectory. Also fixup
the Makefile's and Kconfigs so that it can still be selectively
enabled for either Tegra124 or Tegra132.

BUG=chrome-os-partner:30851
TEST=booted to login screen, verified that the emc scaling driver
had loaded and memory was running at the highest speed.

Change-Id: Ia3738d0f96465a7cd155869b461fd240c1fb3660
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/225084
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -40,13 +40,6 @@ config TEGRA20_MC
 	  analysis, especially for IOMMU/GART(Graphics Address
 	  Relocation Table) module.
 
-config TEGRA124_EMC
-	bool "Tegra124 External Memory Controller(EMC) driver"
-	default y
-	depends on TEGRA124_MC && MFD_SYSCON
-	help
-	  This driver is for the External Memory Controller(EMC) module
-	  available in Tegra124 SoCs.
-
+source "drivers/memory/tegra/Kconfig"
 
 endif
