--- a/drivers/memory/tegra/Makefile
+++ b/drivers/memory/tegra/Makefile
@@ -3,3 +3,4 @@ obj-$(CONFIG_ARCH_TEGRA_3x_SOC)		+= tegra30-mc.o
 obj-$(CONFIG_ARCH_TEGRA_114_SOC)	+= tegra114-mc.o
 obj-$(CONFIG_ARCH_TEGRA_124_SOC)	+= tegra124-mc.o
 obj-$(CONFIG_ARCH_TEGRA_132_SOC)	+= tegra124-mc.o
+obj-$(CONFIG_TEGRA124_EMC)		+= tegra124-emc.o
