watchdog: qcom: Add dts entry for KPSS WDT
Add entries for the watchdog timer block found in the Krait Processor
Subsystem (KPSS) in device tree file.

Change-Id: Ib0436fa16418b7faa3ca24aa78a78f93320c17fc
Signed-off-by: Abhishek Airan <aairan@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/219281
Reviewed-by: Grant Grundler <grundler@chromium.org>
Commit-Queue: Grant Grundler <grundler@chromium.org>
Tested-by: Grant Grundler <grundler@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -341,5 +341,11 @@
 			compatible = "qca8337-lite";
 			mdiobus = <&mdio0>;
 		};
+		watchdog@208a038 {
+			compatible = "qcom,kpss-wdt-ipq8064";
+			reg = <0x0208a038 0x40>;
+			clock-frequency = <32768>;
+			timeout-sec = <10>;
+		};
 	};
 };
