CHROMIUM: ARM: dts: rockchip: Add gpu node to rk3288.dtsi
Add mali gpu to the main rk3288.dtsi file.

The assigned-clock-rates node sets the initial frequency
of the GPU at device probe.  It should be set to a "safe" frequency
that will work with any voltage provided by the GPU's regulator.

BUG=chrome-os-partner:31652
TEST=emerge-veyron_pinky chromeos-kernel-3_14
TEST=boot
 => check mali successfully probed messages in /var/log/messages

Signed-off-by: Simon Xue <xxm@rock-chips.com>
Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>
Change-Id: Ie809d86977abbf54ba58fbd4ce9506f77f9b2802
Reviewed-on: https://chromium-review.googlesource.com/214638
Reviewed-by: Dominik Behr <dbehr@chromium.org>

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -510,6 +510,23 @@
 		status = "disabled";
 	};
 
+	gpu: gpu@0xffa30000 {
+		compatible = "arm,malit764",
+			     "arm,malit76x",
+			     "arm,malit7xx",
+			     "arm,mali-midgard";
+		reg = <0xffa30000 0x10000>;
+		interrupts = <GIC_SPI 6 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 7 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 8 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "JOB", "MMU", "GPU";
+		clocks = <&cru ACLK_GPU>;
+		clock-names = "aclk_gpu";
+		assigned-clocks = <&cru ACLK_GPU>;
+		assigned-clock-rates = <100000000>;
+		status = "disabled";
+	};
+
 	gic: interrupt-controller@ffc01000 {
 		compatible = "arm,gic-400";
 		interrupt-controller;
