ARM: dts: Add pwm regulator to rk3288-pinky-rev2
This adds the pwm regualtor.

BUG=chrome-os-partner:30167
TEST=Watch vdd_logic at bootup and see that it's OK.
TEST=Use I00a0fb8b0bca9137630ff061a4ff6f9743d56a22 in kernel to test
     various values and use dut-control to check vdd_log_mv and see
     that things match.
TEST=Compare numbers to <http://crosreview.com/219753> manually.

Change-Id: Ib8c5cb4ae73feb6a943d56b1f92b35dbc5795f01
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/221755
Commit-Queue: Chris Zhong <zyw@rock-chips.com>
Tested-by: Chris Zhong <zyw@rock-chips.com>

--- a/arch/arm/boot/dts/rk3288-pinky-rev2.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev2.dts
@@ -118,6 +118,25 @@
 		regulator-always-on;
 	};
 
+	vdd_logic: pwm-regulator {
+		compatible = "pwm-regulator";
+		pwms = <&pwm1 0 2000 0>;
+
+		voltage-table = <1350000 0>,
+				<1300000 10>,
+				<1250000 20>,
+				<1200000 31>,
+				<1150000 41>,
+				<1100000 52>,
+				<1050000 62>,
+				<1000000 72>,
+				< 950000 83>;
+
+		regulator-min-microvolt = <950000>;
+		regulator-max-microvolt = <1350000>;
+		regulator-name = "vdd_logic";
+	};
+
 	/* vcc33_sys is controlled by the EC (system_power_h).  Off in S5. */
 	vcc33_sys: vcc33-sys {
 		compatible = "regulator-fixed";
@@ -496,6 +515,10 @@
 };
 
 &pwm0 {
+	status = "okay";
+};
+
+&pwm1 {
 	status = "okay";
 };
 
