CHROMIUM: ARM64: dts: ryu: fix palmas irq polarity
This patch fixes the IRQ polarity of Palmas PMIC on Ryu. After this, the
Palmas IRQ can work normally.

BUG=chrome-os-partner:32484
TEST=make sure the palmas-rtc can work normally;
     and wake up the system from LP0

Change-Id: Ibcad4abe835b1669c45da328549fe00776340ced
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Signed-off-by: Olof Johansson <olofj@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/220122

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -129,7 +129,7 @@
 		palmas: tps65913 {
 			compatible = "ti,palmas";
 			reg = <0x58>;
-			interrupts = <GIC_SPI 86 IRQ_TYPE_LEVEL_HIGH>;
+			interrupts = <GIC_SPI 86 IRQ_TYPE_LEVEL_LOW>;
 
 			#interrupt-cells = <2>;
 			interrupt-controller;
