ARM: dts: Add model in rk3288-pinky-rev1
Some tools(like mosys) read model info from this node.

BUG=chrome-os-partner:30167
TEST=Check '/proc/device-tree/model'

Change-Id: I6a61d9057de9e5f00e9f7e5ce65ab7185be4d5cf
Signed-off-by: Jeffy Chen <jeffy.chen@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/219659
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -14,6 +14,7 @@
 #include "rk3288.dtsi"
 
 / {
+	model = "Google Pinky";
 	compatible = "google,veyron-pinky-rev1", "google,veyron-pinky",
 		     "google,veyron", "rockchip,rk3288";
 
