ARM: dts: Add tpm in rk3288-pinky-rev1
This adds tpm.

BUG=chrome-os-partner:30167
TEST=Check '/dev/tpm0'

Change-Id: I0b3eec13de6e1f5cab6f41595bba903a73a25975
Signed-off-by: Jeffy Chen <jeffy.chen@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/219910
Reviewed-by: Doug Anderson <dianders@chromium.org>
Tested-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -458,6 +458,14 @@
 
 &i2c1 {
 	status = "okay";
+
+	tpm: tpm@20 {
+		compatible = "infineon,slb9645tt";
+		reg = <0x20>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&tpm_int>;
+		powered-while-suspended;
+	};
 };
 
 &i2c2 {
@@ -602,6 +610,12 @@
 
 	        sd_en: sd-en {
 		        rockchip,pins = <7 21 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
+
+	tpm {
+		tpm_int: tpm-int {
+			rockchip,pins = <7 4 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 
