CHROMIUM: arm: dts: tegra: Update interrupt-controller nodes
The interrupt controller nodes for tegra platforms need to include
the "interrupt-controllers" property in their device tree nodes
so that they are recognized as interrupt controllers. Therefore
when irqchip_init tries to match up interrupt controllers, it can
find them and init them. Without this proprety, of_irq_init will
bypass the nodes.

BUG=chrome-os-partner:31211
TEST=IRQ controller comes up and interrupts are functional

Change-Id: Ib0b5f247a1ddd4511b8c8366116846399ef422f5
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/220040
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm/boot/dts/tegra30.dtsi
+++ b/arch/arm/boot/dts/tegra30.dtsi
@@ -256,6 +256,7 @@
 
 	interrupt-controller@60004000 {
 		compatible = "nvidia,tegra30-ictlr";
+		interrupt-controller;
 		reg = <0x60004000 0x40>, /* primary controller */
 		      <0x60004100 0x40>, /* secondary controller */
 		      <0x60004200 0x40>, /* tertiary controller */
