ARM: dts: Set cros-ec-spi-pre-delay rk3288-pinky
We want to use deep sleep on the EC while in S0 to save power. The EC(STM32F071)
takes a little time to wakeup from that sleep. Experimentally I measured about
18us. Some datasheet numbers include wakeup(5us), HSI startup(2us), HSI48
startup(6us). 30us should be enough to cover all that and about a hundred cycles
of wakeup code.

BUG=chrome-os-partner:32223
TEST=With series and EC change(CL:219555), run:
cd /sys/class/power_supply/sbs-20-000b/; while true; do grep "" * >/dev/null 2>&1; done
There should be no errors, particularly no spi bad data messages on the EC which
contain bytes that would never be on the wire.

Change-Id: I651d99e7f3579bb57e37bd6ef8bd82827ebfc21d
Signed-off-by: Alexandru M Stan <amstan@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/219997
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -285,6 +285,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&ec_int>;
 		reg = <0>;
+		google,cros-ec-spi-pre-delay = <30>;
 
 		i2c20: i2c-tunnel {
 			compatible = "google,cros-ec-i2c-tunnel";
