--- a/arch/mips/boot/dts/pistachio_fpga.dts
+++ b/arch/mips/boot/dts/pistachio_fpga.dts
@@ -28,7 +28,7 @@
 	};
 
 	chosen {
-		bootargs = "console=ttyS0,115200 earlycon=uart8250,mmio32,0x18101400,115200";
+		bootargs = "console=ttyS0,115200 earlycon=uart8250,mmio32,0x18101400,115200 root=/dev/sda3 rootwait ro cros_debug";
 	};
 
 	memory {
