storm: of: Configure I2C for TPM in the device tree.
The TPM is attached to I2C on GSBI1.  So configure GSBI1 bus and pins.
Configure TPM as part of I2C so it comes up as the kernel boots.

BUG=chrome-os-partner:32378
TEST=Boot kernel and confirm /dev/tpm0 exists.

Change-Id: Ic85ae4c98f0e2f718a7ff4b2a3bfa734706d5d02
Signed-off-by: Bryan Freed <bfreed@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/220149
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -49,6 +49,12 @@
 				};
 			};
 
+			i2c1_pins: i2c1_pinmux {
+				pins = "gpio53", "gpio54";
+				function = "gsbi1";
+				bias-disable;
+			};
+
 			i2c4_pins: i2c4_pinmux {
 				pins = "gpio12", "gpio13";
 				function = "gsbi4";
@@ -105,6 +111,26 @@
 				clk {
 					pins = "gpio21";
 					drive-strength = <12>;
+				};
+			};
+		};
+
+		gsbi1: gsbi@12440000 {
+			qcom,mode = <GSBI_PROT_I2C_UART>;
+			status = "ok";
+
+			i2c1: i2c@12460000 {
+				status = "ok";
+
+				clock-frequency = <100000>;
+
+				pinctrl-0 = <&i2c1_pins>;
+				pinctrl-names = "default";
+
+				trusted-platform-module {
+					compatible = "infineon,slb9645tt";
+					reg = <0x20>;
+					powered-while-suspended;
 				};
 			};
 		};
