CHROMIUM: ARM: tegra: ryu: Add xHCI support
Assign ports previously owned by the EHCI controllers to the xHCI
controller.  There is one external merged usb port which consists of
two SS and one HS port  (UTMI port 0 and USB3 ports 0/1) and an
internal USB port (UTMI port 1).  PCIe lanes
0 and 1 are used by the USB3 ports.

Based on Venice2 changes by Andrew Bresticker <abrestic@chromium.org>

Signed-off-by: Benson Leung <bleung@chromium.org>

BUG=chrome-os-partner:30796
CQ-DEPEND=CL:*182936
TEST=Boot, plug in usb. see it enumerate.

Change-Id: I6e4f850e638cc2733b970f890e9e58dc7dd8dcb6
Reviewed-on: https://chromium-review.googlesource.com/227544
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>
Commit-Queue: Benson Leung <bleung@chromium.org>
Tested-by: Benson Leung <bleung@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -319,7 +319,7 @@
 						regulator-boot-on;
 					};
 
-					ldo1 {
+					avdd_1v05_run: ldo1 {
 						regulator-name = "avdd-pll";
 						regulator-min-microvolt = <1050000>;
 						regulator-max-microvolt = <1050000>;
@@ -328,7 +328,7 @@
 						ti,roof-floor = <3>;
 					};
 
-					ldo2 {
+					vdd_1v05_run: ldo2 {
 						regulator-name = "vdd-usb3";
 						regulator-min-microvolt = <1050000>;
 						regulator-max-microvolt = <1050000>;
@@ -470,24 +470,6 @@
 		status = "okay";
 	};
 
-	/* USB A connector */
-	usb@7d000000 {
-		status = "okay";
-	};
-
-	usb-phy@7d000000 {
-		status = "okay";
-	};
-
-	usb@7d008000 {
-		status = "okay";
-	};
-
-	usb-phy@7d008000 {
-		status = "okay";
-		vbus-supply = <&vdd_usb3_vbus>;
-	};
-
 	sdhci@700b0000 {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -500,6 +482,53 @@
 		nvidia,host-off-card-on;
 		keep-power-in-suspend;
 		tap-delay = <2>;
+	};
+
+	usb@0,70090000 {
+		status = "okay";
+		phys = <&padctl TEGRA_XUSB_PADCTL_UTMI_P0>, /* USB 2.0 to port */
+		       <&padctl TEGRA_XUSB_PADCTL_UTMI_P2>, /* WWAN USB 2.0 */
+		       <&padctl TEGRA_XUSB_PADCTL_USB3_P0>, /* 1st USB 3.0 */
+		       <&padctl TEGRA_XUSB_PADCTL_USB3_P1>; /* 2nd USB 3.0 */
+		phy-names = "utmi-0", "utmi-2", "usb3-0", "usb3-1";
+		avddio-pex-supply = <&vdd_1v05_run>;
+		dvddio-pex-supply = <&vdd_1v05_run>;
+		avdd-usb-supply = <&vdd_3v3_reg>;
+		avdd-pll-utmip-supply = <&palmas_smps8>;
+		avdd-pll-erefe-supply = <&avdd_1v05_run>;
+		avdd-pex-pll-supply = <&vdd_1v05_run>;
+		hvdd-pex-supply = <&vdd_3v3_reg>;
+		hvdd-pex-plle-supply = <&vdd_3v3_reg>;
+	};
+
+	padctl@0,7009f000 {
+		pinctrl-0 = <&padctl_default>;
+		pinctrl-names = "default";
+
+		vbus-2-supply = <&vdd_usb3_vbus>;
+		nvidia,usb3-port-0-lane = <TEGRA_XUSB_PADCTL_PIN_PCIE_0>;
+		nvidia,usb3-port-1-lane = <TEGRA_XUSB_PADCTL_PIN_PCIE_1>;
+
+		padctl_default: pinmux {
+			otg {
+				nvidia,lanes = "otg-0", "otg-1", "otg-2";
+				nvidia,function = "xusb";
+			};
+
+			usb3p0 {
+				nvidia,lanes = "pcie-0";
+				nvidia,function = "usb3";
+				nvidia,iddq = <0>;
+				nvidia,usb2-port-num = <0>;
+			};
+
+			usb3p1 {
+				nvidia,lanes = "pcie-1";
+				nvidia,function = "usb3";
+				nvidia,iddq = <0>;
+				nvidia,usb2-port-num = <0>;
+			};
+		};
 	};
 
 	sdhci@700b0600 {
