CHROMIUM: ARM64: dts: ryu: Enable PDn togggle for reset
Modify device tree so the PDn is toggled during SDIO bus
re-enumeration.

Signed-off-by: Paul Stewart <pstew@chromium.org>

BUG=chrome-os-partner:32044
TEST=echo 1 > /sys/kernel/debug/mwifiex/mlan0/reset

Change-Id: If65557f9dc26a2c69026344d04759bd9563f820a
Reviewed-on: https://chromium-review.googlesource.com/221682
Reviewed-by: Olof Johansson <olofj@chromium.org>
Tested-by: Paul Stewart <pstew@chromium.org>
Commit-Queue: Paul Stewart <pstew@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -390,7 +390,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		power-gpios = <&gpio TEGRA_GPIO(X, 7) GPIO_ACTIVE_HIGH>;
+		card-reset-gpios = <&gpio TEGRA_GPIO(X, 7) GPIO_ACTIVE_LOW>;
 		bus-width = <4>;
 		no-1-8-v;
 		non-removable;
