CHROMIUM: ARM: dts: rockchip: add gpu operating-points
Add GPU operating-points table to rk3288.dtsi.
The actual frequencies and voltages may be refined in a later patch.

Also, the initial gpu voltage will be selected from the lowest frequency
in operating-points, so we no longer need the assigned-clock-rates field.

BUG=chrome-os-partner:31652
TEST=emerge-veyron_pinky chromeos-kernel-3_14
TEST=boot to UI with DRM patch set

Change-Id: I5b7e64a6e5b3294d1f437f75603fa5ab544f3426
Signed-off-by: Simon Xue <xxm@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/220132
Reviewed-by: Dominik Behr <dbehr@chromium.org>
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -522,8 +522,14 @@
 		interrupt-names = "JOB", "MMU", "GPU";
 		clocks = <&cru ACLK_GPU>;
 		clock-names = "aclk_gpu";
-		assigned-clocks = <&cru ACLK_GPU>;
-		assigned-clock-rates = <100000000>;
+		operating-points = <
+			/* KHz uV */
+			100000 800000
+			200000 850000
+			300000 950000
+			400000 1000000
+			600000 1150000
+		>;
 		status = "disabled";
 	};
 
