ARM: dts: Fix io-voltage-domain compatible to match upstream
The compatible string for io-voltage-domain changed upstream.  We'll
change to match.

BUG=chrome-os-partner:30167
TEST=Build and boot; WiFi still works.

Change-Id: I7c04f7706667f79f266d646ea2f9b6c718370e52
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/220686
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -199,7 +199,7 @@
 	};
 
 	io-domains {
-		compatible = "rockchip,rk3288-iodomain";
+		compatible = "rockchip,rk3288-io-voltage-domain";
 		rockchip,grf = <&grf>;
 
 		audio-supply = <&vcc18_codec>;
