CHROMIUM: ryu: dts: Add tuning data for mmc bus for HS200
Signed-off-by: Puthikorn Voravootivat <puthik@chromium.org>

CQ-DEPEND=CL:219925
BUG=chrome-os-partner:32629,chrome-os-partner:33431
TEST=/sys/kernel/debug/mmc{0,1}/ios runs faster, perf improve

Change-Id: I7ecc4c6060e70a23d40b8af393e96a0453e59007
Reviewed-on: https://chromium-review.googlesource.com/222059
Reviewed-by: Olof Johansson <olofj@chromium.org>
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Puthikorn Voravootivat <puthik@chromium.org>
Tested-by: Puthikorn Voravootivat <puthik@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -480,7 +480,53 @@
 		status = "okay";
 		nvidia,host-off-card-on;
 		keep-power-in-suspend;
-		tap-delay = <2>;
+		tap-delay = <0>;
+
+		trim-delay = <0x2>;
+		calib-3v3-offsets = <0x7676>;
+		calib-1v8-offsets = <0x7676>;
+		calib-1v8-offsets-uhs-modes = <0x3f>;
+		max-frequency = <204000000>;
+
+		nvidia,vmax = <1150>;
+		nvidia,vmin = <950>;
+		nvidia,t2t-vnom-slope = <25>;
+		nvidia,t2t-vnom-int = <115933>;
+		nvidia,t2t-vmax-slope = <25>;
+		nvidia,t2t-vmax-int = <115933>;
+		nvidia,t2t-vmin-slope = <47>;
+		nvidia,t2t-vmin-int = <187224>;
+
+		tuning-data@0 {
+			compatible = "nvidia,sdhci-tuning-data";
+			clock-frequency = <81600000>;
+			nvidia,thole-vnom-slope = <2916>;
+			nvidia,thole-vnom-int = <331143>;
+			nvidia,thole-vmax-slope = <2916>;
+			nvidia,thole-vmax-int = <331143>;
+			nvidia,thole-vmin-slope = <1480>;
+			nvidia,thole-vmin-int = <232373>;
+		};
+		tuning-data@1 {
+			compatible = "nvidia,sdhci-tuning-data";
+			clock-frequency = <136000000>;
+			nvidia,thole-vnom-slope = <1554>;
+			nvidia,thole-vnom-int = <167210>;
+			nvidia,thole-vmax-slope = <1554>;
+			nvidia,thole-vmax-int = <167210>;
+			nvidia,thole-vmin-slope = <793>;
+			nvidia,thole-vmin-int = <115672>;
+		};
+		tuning-data@2 {
+			compatible = "nvidia,sdhci-tuning-data";
+			clock-frequency = <204000000>;
+			nvidia,thole-vnom-slope = <874>;
+			nvidia,thole-vnom-int = <85243>;
+			nvidia,thole-vmax-slope = <874>;
+			nvidia,thole-vmax-int = <85243>;
+			nvidia,thole-vmin-slope = <449>;
+			nvidia,thole-vmin-int = <57321>;
+		};
 	};
 
 	usb@0,70090000 {
@@ -535,6 +581,53 @@
 		bus-width = <8>;
 		non-removable;
 		status = "okay";
+
+		trim-delay = <0x4>;
+		ddr-trim-delay = <0x0>;
+		calib-3v3-offsets = <0x0202>;
+		calib-1v8-offsets = <0x0202>;
+		calib-1v8-offsets-uhs-modes = <0x3f>;
+		max-frequency = <200000000>;
+
+		nvidia,vmax = <1150>;
+		nvidia,vmin = <950>;
+		nvidia,t2t-vnom-slope = <27>;
+		nvidia,t2t-vnom-int = <118295>;
+		nvidia,t2t-vmax-slope = <27>;
+		nvidia,t2t-vmax-int = <118295>;
+		nvidia,t2t-vmin-slope = <48>;
+		nvidia,t2t-vmin-int = <188148>;
+
+		tuning-data@0 {
+			compatible = "nvidia,sdhci-tuning-data";
+			clock-frequency = <81600000>;
+			nvidia,thole-vnom-slope = <3090>;
+			nvidia,thole-vnom-int = <351666>;
+			nvidia,thole-vmax-slope = <3090>;
+			nvidia,thole-vmax-int = <351666>;
+			nvidia,thole-vmin-slope = <1583>;
+			nvidia,thole-vmin-int = <247913>;
+		};
+		tuning-data@1 {
+			compatible = "nvidia,sdhci-tuning-data";
+			clock-frequency = <136000000>;
+			nvidia,thole-vnom-slope = <1703>;
+			nvidia,thole-vnom-int = <186307>;
+			nvidia,thole-vmax-slope = <1703>;
+			nvidia,thole-vmax-int = <186307>;
+			nvidia,thole-vmin-slope = <890>;
+			nvidia,thole-vmin-int = <130617>;
+		};
+		tuning-data@2 {
+			compatible = "nvidia,sdhci-tuning-data";
+			clock-frequency = <200000000>;
+			nvidia,thole-vnom-slope = <1037>;
+			nvidia,thole-vnom-int = <106934>;
+			nvidia,thole-vmax-slope = <1037>;
+			nvidia,thole-vmax-int = <106934>;
+			nvidia,thole-vmin-slope = <558>;
+			nvidia,thole-vmin-int = <74315>;
+		};
 	};
 
 	spi@7000da00 {
