FROMLIST: ARM: dts: rk3288: add VOP iommu nodes
Add device nodes for the VOP iommus.
Device nodes for other iommus will be added in later patches.

The iommu nodes use the #iommu-cells property as described in:
  Documentation/devicetree/bindings/iommu/iommu.txt

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>
Signed-off-by: Simon Xue <xxm@rock-chips.com>
(am from https://patchwork.kernel.org/patch/5050961/)
[djkurtz: _mmu nodes moved above gpu, which is not upstream)

BUG=chrome-os-partner:31704
TEST=emerge-veyron_pinky chromeos-kernel-3_14
TEST=With DRM patches, UI displays properly veyron_pinky

Change-Id: I7a697e812fcac5cd7dbe8fa5decd1e1699ea3e8f
Reviewed-on: https://chromium-review.googlesource.com/218050
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -514,6 +514,24 @@
 		status = "disabled";
 	};
 
+	vopb_mmu: iommu@0xff930300 {
+		compatible = "rockchip,iommu";
+		reg = <0xff930300 0x100>;
+		interrupts = <GIC_SPI 15 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "vopb_mmu";
+		#iommu-cells = <0>;
+		status = "disabled";
+	};
+
+	vopl_mmu: iommu@0xff940300 {
+		compatible = "rockchip,iommu";
+		reg = <0xff940300 0x100>;
+		interrupts = <GIC_SPI 16 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "vopl_mmu";
+		#iommu-cells = <0>;
+		status = "disabled";
+	};
+
 	gpu: gpu@0xffa30000 {
 		compatible = "arm,malit764",
 			     "arm,malit76x",
