CHROMIUM: ryu: dts: Add proximity/als to ryu dts
Signed-off-by: Puthikorn Voravootivat <puthik@chromium.org>

BUG=chrome-os-partner:32829
TEST=grep "" /sys/bus/iio/devices/*/*_raw shows reasonable value

Change-Id: Ia3a2978152aaae41db28fb7bdecb1651a2b5492a
Reviewed-on: https://chromium-review.googlesource.com/222671
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Benson Leung <bleung@chromium.org>
Commit-Queue: Puthikorn Voravootivat <puthik@chromium.org>
Tested-by: Puthikorn Voravootivat <puthik@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -51,19 +51,19 @@
 			interrupts = <TEGRA_GPIO(J, 0) IRQ_TYPE_LEVEL_LOW>;
 			wakeup-source;
 
-	                i2c_21: i2c-tunnel {
-	                        compatible = "google,cros-ec-i2c-tunnel";
-	                        #address-cells = <1>;
-	                        #size-cells = <0>;
+			i2c_21: i2c-tunnel {
+				compatible = "google,cros-ec-i2c-tunnel";
+				#address-cells = <1>;
+				#size-cells = <0>;
 
-	                        google,remote-bus = <0>;
+				google,remote-bus = <0>;
 
-	                        battery: bq27742@55 {
-	                                compatible = "ti,bq27742";
-	                                reg = <0x55>;
-	                                battery-name = "battery";
-	                        };
-	                };
+				battery: bq27742@55 {
+					compatible = "ti,bq27742";
+					reg = <0x55>;
+					battery-name = "battery";
+				};
+			};
 		};
 
 		sh: cros-ec@1f {
@@ -99,6 +99,11 @@
 				compass: ak09912@c {
 					compatible = "akm,ak09912";
 					reg = <0xc>;
+				};
+
+				als: si114x@5a {
+					compatible = "sl,si114x";
+					reg = <0x5a>;
 				};
 			};
 		};
